<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="@string/signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="omenimage"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">
        <ListPreference
            app:defaultValue="replyImage"
            app:entries="@array/reply_entriesImage"
            app:entryValues="@array/reply_valuesImage"
            app:key="replyImage"
            app:title="@string/imageName"
            app:useSimpleSummaryProvider="true"

            />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/text">

    <EditTextPreference
        app:key="@string/number"
        app:title="@string/typeNumber"
        app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>